--- a/app/src/main/res/layout/activity_tab_fragment_nearby.xml
+++ b/app/src/main/res/layout/activity_tab_fragment_nearby.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:id="@+id/layout_nearby">
+    android:id="@+id/layout_nearby_tab">
     <ProgressBar
         android:id="@+id/pv_restaurant_menu"
         android:layout_width="42dp"
