--- a/app/src/main/res/layout/foodapp_bottom_sheet.xml
+++ b/app/src/main/res/layout/foodapp_bottom_sheet.xml
@@ -14,9 +14,7 @@
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        >
-
+        android:layout_height="40dp">
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
