--- a/app/src/main/res/layout/timelineview_vertical.xml
+++ b/app/src/main/res/layout/timelineview_vertical.xml
@@ -5,14 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginTop="10dp"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-   >
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-
     android:layout_margin="10dp"
     android:orientation="vertical">
 
@@ -39,8 +37,7 @@
         android:elevation="10dp">
 
 
-
-    <LinearLayout
+        <LinearLayout
         android:gravity="center"
         android:orientation="horizontal"
         android:layout_width="match_parent"
@@ -148,59 +145,58 @@
         </LinearLayout>
     </com.google.android.material.card.MaterialCardView>
 
-    <com.google.android.material.card.MaterialCardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="5dp"
-        android:elevation="10dp">
+    <!--<com.google.android.material.card.MaterialCardView
+       android:layout_width="match_parent"
+       android:layout_height="wrap_content"
+       android:layout_margin="5dp"
+       android:elevation="10dp">
 
-       <!-- <LinearLayout
-            android:gravity="center"
-            android:orientation="horizontal"
-            android:layout_width="match_parent"
-            android:layout_height="70dp">
-            <ImageView
+      <LinearLayout
+           android:gravity="center"
+           android:orientation="horizontal"
+           android:layout_width="match_parent"
+           android:layout_height="70dp">
+           <ImageView
 
-                android:layout_width="15dp"
-                android:layout_height="15dp"
+               android:layout_width="15dp"
+               android:layout_height="15dp"
+               android:layout_marginLeft="5dp"
+               android:visibility="visible"
+               app:srcCompat="@drawable/animated_check" />
 
-android:layout_marginLeft="5dp"
-                android:visibility="visible"
-                app:srcCompat="@drawable/animated_check" />
+           <View
+               android:layout_width="50dp"
+               android:layout_height="1px"
+               android:layout_marginLeft="20px"
+               android:layout_marginRight="20px"
+               android:background="#0A0909" />
+           <ImageView
+               android:layout_width="42dp"
+               android:layout_height="42dp"
+               android:src="@drawable/foodontheway_icon"
 
-            <View
-                android:layout_width="50dp"
-                android:layout_height="1px"
-                android:layout_marginLeft="20px"
-                android:layout_marginRight="20px"
-                android:background="#0A0909" />
-            <ImageView
-                android:layout_width="42dp"
-                android:layout_height="42dp"
-                android:src="@drawable/foodontheway_icon"
+               android:layout_marginRight="5dp"/>
 
-                android:layout_marginRight="5dp"/>
-
-            <LinearLayout
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:textColor="@color/blackTextColor"
-                    android:textSize="16sp"
-                    android:paddingLeft="10dp"
-                    android:text="Food On The Way"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-                <TextView
-                    android:textSize="12sp"
-                    android:paddingLeft="10dp"
-                    android:text="Your order is on the way."
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>-->
-    </com.google.android.material.card.MaterialCardView>
+           <LinearLayout
+               android:orientation="vertical"
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content">
+               <TextView
+                   android:textColor="@color/blackTextColor"
+                   android:textSize="16sp"
+                   android:paddingLeft="10dp"
+                   android:text="Food On The Way"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content" />
+               <TextView
+                   android:textSize="12sp"
+                   android:paddingLeft="10dp"
+                   android:text="Your order is on the way."
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content" />
+           </LinearLayout>
+       </LinearLayout>
+    </com.google.android.material.card.MaterialCardView>-->
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
