--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="colorPrimary">#ffcc00</color>
+
     <color name="colorPrimaryDark">#070707</color>
-    <color name="colorAccent">#D81B60</color>
+
+    <color name="colorAccent">#ffcc00</color>
+
     <color name="white">#FFFFFF</color>
+
+    <color name="black">#070707</color>
+
+    <color name="yellow">#ffcc00</color>
+
     <color name="signupColor">#066e8a</color>
+
     <color name="backgroundfragment">#FFCC00</color>
+
     <color name="logo_secondary_color">#E9112B</color>
+
     <color name="logo_primary_color">#E90E1552</color>
+
     <color name="profilePrimaryDark">#FF3B30</color>
+
     <color name="profileAccentColor">#F7F7F7</color>
+
     <color name="whiteTextColor">#fff</color>
 
     <color name="green">#055F09</color>
+
     <color name="profileBackground">#fff</color>
+
     <color name="blackTextColor">#070707</color>
+
     <color name="profileEditTextColor">#070707</color>
 </resources>
