--- a/app/src/main/res/layout/activity_shop_cart_page.xml
+++ b/app/src/main/res/layout/activity_shop_cart_page.xml
@@ -417,7 +417,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Send as a Gift"
-
+        android:padding="10dp"
         android:layout_marginLeft="30dp"
         />
 
